--- a/journal.html
+++ b/journal.html
@@ -3,7 +3,28 @@
 <head>
 	<title></title>
 </head>
+
+<style type="text/css">
+	
+#Entries{
+	width: 80%;
+}
+	body{
+		background-color: pink;
+	}
+
+</style>
 <body>
-This is My Journal!
+
+<center><div id="Entries"><p>10/1</p>
+<p>
+So far in CS1, I have learned the basics of coding with Sublime Text. I learned about the layout of Sublime Text, what everything looks like and means, and how to use CSS in the style section. I also learned how to make a personcard. I’m feeling pretty good about everything but there is still a lot I have to learn. Right now I am working on my website, specifically figuring out how to format it. I am very excited to see the final product for my website. Something that is frustrating me is that there are still some minor errors that I don’t know how to fix. In the upcoming weeks, I am hoping to finish my website and publish it.</p>
+
+<p>10/11</p>
+<p>
+I just encountered a problem with my website that neither I nor Ms. Josephs can seem to figure out. When trying to make it so that by clicking on the shark it takes you to my journal, but for some reason, the shark disappeared and no matter where you click on the website, it takes you to the journal. Also, when we put a background color on the shark, the tip of a second shark also showed. After trying to figure it out in class, we could not come to a reasonable conclusion. Hopefully, I fix it soon because it is very frustrating.</p>
+
+</div>
+</center>
 </body>
 </html>
