adding mike maker link

--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,10 @@
 	<title></title>
 </head>
 <body>
-These are my Projects!
+<p>These are my Projects!</p>
+
+<p><a href="randomizer.html">mike maker</a></p>
+
+
 </body>
 </html>
