adding to projects

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,9 @@
 <body>
 <p>These are my Projects!</p>
 
-<p><a href="randomizer.html">mike maker</a></p>
+<p><a href="randomizer.html">Mike Maker</a></p>
+
+<p><a href="cssAnomation.html">Michael Jackson</a></p>
 
 
 </body>
