--- a/cookiedinosaur.html
+++ b/cookiedinosaur.html
@@ -21,9 +21,6 @@ I AM THANKFUL FOR ALEX KIM
 <script type="text/javascript">
 	
 
-var array = ["kim2","kim3","kim4"]
-
-
 	function makeKim (){
 		var variable = Math.floor(Math.random()*2)
 
@@ -33,7 +30,7 @@ var array = ["kim2","kim3","kim4"]
 			cookie.style.width = "1700px";
 			cookie.style.backgroundImage = "url(kim1.png)";
 			cookie.addEventListener("click", function (){
-				cookie.style.backgroundImage = "url("+ variable + ")";
+				cookie.style.backgroundImage = "url(kim2.png)";
 				cookie.style.backgroundSize = "cover"})
 		}
 
