--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,9 @@
 
 <p><a href="cssAnomation.html">Michael Jackson</a></p>
 
+<p><a href="https://docs.google.com/presentation/d/1GwuYIe8hN45YEWx_3UTAKKW7gWMLeIc_WVYfoxKEELA/edit#slide=id.p">How It Works</a></p>
+
+<p><a href="cookiedinosaur.html">Thankful</a></p>
 
 </body>
 </html>
