adding website for a while

--- a/journal.html
+++ b/journal.html
@@ -24,6 +24,18 @@ So far in CS1, I have learned the basics of coding with Sublime Text. I learned 
 <p>
 I just encountered a problem with my website that neither I nor Ms. Josephs can seem to figure out. When trying to make it so that by clicking on the shark it takes you to my journal, but for some reason, the shark disappeared and no matter where you click on the website, it takes you to the journal. Also, when we put a background color on the shark, the tip of a second shark also showed. After trying to figure it out in class, we could not come to a reasonable conclusion. Hopefully, I fix it soon because it is very frustrating.</p>
 
+<p>12/1</p>
+<p>
+After going through this checklist, I have everything that I need to know and have done. The only thing I didn’t fully understand was arrays, but after making a lab and talking to my classmates, I think I have it down. Specifically, I was having trouble with the math randomizer but I know it now. I feel good about everything that we’ve done so far and am ready to learn more.</p>
+
+<p>12/7</p>
+<p>
+For my Christmas present, I made a Christmas tree for my sister with designable ornaments to be put on the tree. I used her hobbies, pictures of her, pictures of the family, and general Christmas decorations. I haven’t given it to her yet, but I think she will love it. I did this project by making a separate div for the tree and each of the ornaments while using arrays and event listeners. I hope she loves it!</p>
+
+<p>12/15</p>
+<p>
+Today in class Avi and I presented our slideshow on Emojis and how they work. We talked about how a Japanese man named Shigetaka Kurita created them in 1999 so that you could fit more into an email with a 250 character limit. He made them on a 12x12 design which he found difficult because there was no center point. Now, however, because of vector graphics they can work with as many pixels as they want. One fact I found really interesting was that there was no third-party group involved at the beginning and Kurita and his team could publish whatever emojis they wanted to. Overall I really enjoyed researching this topic.</p>
+
 </div>
 </center>
 </body>
