--- a/katechristmas.html
+++ b/katechristmas.html
@@ -5,49 +5,64 @@
 	<style type="text/css">
 	
 	#fam{
-		background-image: url();
+		background-image: url(family.png);
 		background-size: cover;
 	}
 
 	#kate{
-		background-image: url();
+		background-image: url(kate.png);
 		background-size: cover;
 	}
 
 	#penguin{
-		background-image: url();
+		background-image: url(p.png);
 		background-size: cover;
 	}
 
 	#santa{
-		background-image: url(santa.png);
+		background-image: url(santa1.png);
 		background-size: cover;
 	}
 
 	#gymnast{
-		background-image: url();
+		background-image: url(gymnast.png);
 		background-size: cover;
 	}
 
 	#soccer{
-		background-image: url();
+		background-image: url(soccer.png);
 		background-size: cover;
 	}
 
 	#circle{
-		background-image: url();
+		background-image: url(circle.png);
 		background-size: cover;
 	}
 
 	#star{
-		background-image: url();
+		background-image: url(star.png);
+		background-size: cover;
+	}
+
+	#tree{
+		background-image: url(tre.png);
 		background-size: cover;
 	}
 
 .ornament{
-	width: 25px;
-	height: 25px;
+	width: 80px;
+	height: 80px;
 	background-size: contain;
+	background-repeat: no-repeat;
+	display: inline-block;
+	position: relative;
+}
+
+.base{
+	width: 320px;
+	height: 550px;
+	background-size: 95%;
+	background-position: center;
 	background-repeat: no-repeat;
 	display: inline-block;
 	position: relative;
@@ -67,7 +82,7 @@
 <div class="ornament" id="soccer"></div>
 <div class="ornament" id="circle"></div>
 <div class="ornament" id="star"></div>
-<div id="tree"></div>
+<div class="base" id="tree"></div>
 
 
 
