--- a/journal.html
+++ b/journal.html
@@ -36,6 +36,10 @@ For my Christmas present, I made a Christmas tree for my sister with designable 
 <p>
 Today in class Avi and I presented our slideshow on Emojis and how they work. We talked about how a Japanese man named Shigetaka Kurita created them in 1999 so that you could fit more into an email with a 250 character limit. He made them on a 12x12 design which he found difficult because there was no center point. Now, however, because of vector graphics they can work with as many pixels as they want. One fact I found really interesting was that there was no third-party group involved at the beginning and Kurita and his team could publish whatever emojis they wanted to. Overall I really enjoyed researching this topic.</p>
 
+<p>2/6</p>
+<p>
+This week we have been working on new projects in class and at home. I am making Madlibs. My plan is to have alert boxes that ask for different parts of speech (verbs, adjectives, nouns, adverbs, names, etc.). These alert boxes will all come up separately before any text appears on the screen. After all the questions have been answered, the finished madlib will appear on the screen with all the empty boxes filled in. My brother loves Madlibs, so as soon as I finish I will show it to him. Im not done yet because I still need to figure out how to sequence the alert boxes, but I am excited for the end result. </p>
+
 </div>
 </center>
 </body>
