--- a/madlibs.html
+++ b/madlibs.html
@@ -39,9 +39,9 @@ body{
 </head>
 <body>
 
-<div id="School"> <a href="school.html">Day at School</a> </div>
+<div id="School"> <a href="school.html">Year at School</a> </div>
 <div id="Zoo"> <a href="zoo.html">Trip to the Zoo</div>
-<div id="Sea"> <a href="sea.html">Lost at Sea</div>
+<div id="Sea"> <a href="sea.html">Exploring the Sea</div>
 
 <script type="text/javascript">
 	
