--- a/projects.html
+++ b/projects.html
@@ -14,5 +14,9 @@
 
 <p><a href="cookiedinosaur.html">Thankful</a></p>
 
+<p><a href="pingponggame.html">Ping Pong Game</a></p>
+
+<p><a href="madlibs.html">Madlibs</a></p>
+
 </body>
 </html>
