--- a/school.html
+++ b/school.html
@@ -9,6 +9,11 @@ body{
 	background-color: khaki;
 }
 
+#story{
+	font-size: 35px;
+	font-family: courier;
+}
+
 #Title{
 	font-size: 100px;
 	margin-left: 28.5%;
@@ -16,28 +21,144 @@ body{
 
 #Textbox{
 	width: 100px;
-	height:100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox2{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox3{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox4{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox5{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox6{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox7{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox8{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox9{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox10{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox11{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox12{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox13{
+	width: 100px;
+	height: 100px;
 	background-color: blue;
 }
 
 </style>
 
-<div id="Title">Day at School</div>
+<div id="Title">Year at School</div>
 
 </head>
 <body>
 
- <center><div id="textbox"></div></center>
-
- <center><div id="textbox2"></div></center>
-
- <center><div id="textbox3"></div></center>
+	<center><div id="story">This year was the most <span id="textbox"></span> year ever! You wouldn’t believe how <span id="textbox2"></span> the school year was! From day one of this year, I felt <span id="textbox3"></span> because my <span id="textbox4"></span> always <span id="textbox5"></span>. I know, right? Unbelievable! Had I not experienced it myself, I wouldn’t believe it either. And as if that weren’t enough, all of the <span id="textbox6"></span> in my school were always <span id="textbox7"></span>ing. This was a daily thing and it made me absolutely <span id="textbox8"></span>. Another unbelievable thing about this year was how all of the <span id="textbox9"></span> would start <span id="textbox10"></span> every time they heard the word <span id="textbox11"></span>. It was the most <span id="textbox12"></span> thing my eyes had ever seen. Boy, I sure am going to <span id="textbox13"></span> the days of this school year. See you on the other side!</div></center>
 
  <script type="text/javascript">
  	
-var name = prompt("What is your name?");
+var adjective = prompt("Give me an adjective:");
 
-textbox.innerText = name;
+var adjective2 = prompt("Give me another adjective:");
+
+var adjective3 = prompt("Give me another adjective:");
+
+var adjective4 = prompt("Give me another adjective:");
+
+var adjective5 = prompt("Give me another adjective:");
+
+var noun = prompt("Give me a noun:");
+
+var pluralNoun = prompt("Give me a plural noun:");
+
+var pluralNoun2 = prompt("Give me another plural noun:");
+
+var word = prompt("Give me a random word:");
+
+var verb = prompt("Give me a verb:");
+
+var verb2 = prompt("Give me another verb:");
+
+var verb3 = prompt("Give me another verb:");
+
+var verb4 = prompt("Give me another verb:");
+
+textbox.innerText = adjective;
+
+textbox2.innerText = adjective2;
+
+textbox3.innerText = adjective3;
+
+textbox4.innerText = noun;
+
+textbox5.innerText = verb;
+
+textbox6.innerText = pluralNoun;
+
+textbox7.innerText = verb2;
+
+textbox8.innerText = adjective4;
+
+textbox9.innerText = pluralNoun2;
+
+textbox10.innerText = verb3;
+
+textbox11.innerText = word;
+
+textbox12.innerText = adjective5;
+
+textbox13.innerText = verb4;
 
  </script>
 
