--- a/sea.html
+++ b/sea.html
@@ -11,15 +11,250 @@ body{
 
 #Title{
 	font-size: 100px;
-	margin-left: 33.5%;
+	margin-left: 22%;
+}
+
+#story{
+	font-size: 35px;
+	font-family: courier;
+}
+
+
+#textbox{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox2{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox3{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox4{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox5{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox6{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox7{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox8{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox9{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox10{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox11{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox12{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox13{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox14{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox15{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox16{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox17{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox18{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox19{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox20{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox21{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#textbox22{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
 }
 
 </style>
 
-<div id="Title">Lost at Sea</div>
 
 </head>
 <body>
+<div id="Title">Exploring the Ocean</div>
+
+	<center><div id="story">I'm a <span id="textbox"></span> biologist aboard a <span id="textbox2"></span> on the <span id="textbox3"></span> Ocean. I'm inside a <span id="textbox4"></span> cage made of <span id="textbox5"></span> and am about to <span id="textbox6"></span> into the ocean, surrounded by deadly <span id="textbox7"></span>. This is a safe way to <span id="textbox8"></span> the <span id="textbox9"></span> without being <span id="textbox10"></span>. I'm wearing <span id="textbox11"></span> gear, like a mask and <span id="textbox12"></span> so I can <span id="textbox13"></span> underwater. Using a <span id="textbox14"></span>, I'll <span id="textbox15"></span> video and <span id="textbox16"></span> of the undersea creatures, like <span id="textbox17"></span> and <span id="textbox18"></span>. There are also interesting <span id="textbox19"></span> plants and bright coral <span id="textbox20"></span>, which look like rocks but are actuall living <span id="textbox21"></span>. It's a <span id="textbox22"></span> job, but I love it!</div></center>
+
+<script type="text/javascript">
+
+
+var adjective = prompt("Give me an adjective:");
+
+var adjective2 = prompt("Give me another adjective:");
+
+var adjective3 = prompt("Give me another adjective:");
+
+var adjective4 = prompt("Give me another adjective:");
+
+var verb = prompt("Give me a verb:");
+
+var verb2 = prompt("Give me another verb:");
+
+var verb3 = prompt("Give me another verb:");
+
+var verb4 = prompt("Give me another verb:");
+
+var verbEd = prompt("Give me a verb-ed:");
+
+var verbIng = prompt("Give me a verb-ing:");
+
+var noun = prompt("Give me a noun:");
+
+var noun2 = prompt("Give me another noun:");
+
+var noun3 = prompt("Give me another noun:");
+
+var nouns = prompt("Give me a noun-s:");
+
+var nouns2 = prompt("Give me another noun-s:");
+
+var nouns3 = prompt("Give me another noun-s:");
+
+var animal = prompt("Give me another noun:");
+
+var animal2 = prompt("Give me another animal:");
+
+var animal3 = prompt("Give me another animal:");
+
+var animal4 = prompt("Give me another animal:");
+
+var verb = prompt("Give me a verb:");
+
+var color = prompt("Give me a color:");
+
+var vehicle = prompt("Give me a vehicle:");
+
+textbox.innerText = adjective;
+
+textbox2.innerText = vehicle;
+
+textbox3.innerText = adjective2;
+
+textbox4.innerText = adjective3;
+
+textbox5.innerText = noun;
+
+textbox6.innerText = verb;
+
+textbox7.innerText = animal;
+
+textbox8.innerText = verb2;
+
+textbox9.innerText = animal2;
+
+textbox10.innerText = verbEd;
+
+textbox11.innerText = verbIng;
+
+textbox12.innerText = noun2;
+
+textbox13.innerText = verb3;
+
+textbox14.innerText = noun3;
+
+textbox15.innerText = verb4;
+
+textbox16.innerText = nouns;
+
+textbox17.innerText = animal3;
+
+textbox18.innerText = animal4;
+
+textbox19.innerText = color;
+
+textbox20.innerText = nouns2;
+
+textbox21.innerText = nouns3;
+
+textbox22.innerText = adjective4;
+
+</script>
 
 </body>
 </html>
