--- a/zoo.html
+++ b/zoo.html
@@ -14,12 +14,150 @@ body{
 	margin-left: 27.6%;
 }
 
+#story{
+	font-size: 35px;
+	font-family: courier;
+}
+
+
+#Textbox{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox2{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox3{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox4{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox5{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox6{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox7{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox8{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox9{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox10{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox11{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+#Textbox12{
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
+
+
+
 </style>
+
+
 
 <div id="Title">Trip to the Zoo</div>
 
 </head>
 <body>
+
+
+	<center><div id="story">Today I went to the zoo. I saw a <span id="textbox"></span> <span id="textbox2"></span> jumping up and down in its tree. He <span id="textbox3"></span> <span id="textbox4"></span> through the large tunnel that led to its <span id="textbox5"></span> <span id="textbox6"></span>. I got some peanuts and passed them through the cage to a gigantic gray <span id="textbox7"></span> towering above my head. Feeding that animal made me hungry. I went to get a <span id="textbox8"></span> scoop of ice cream. It filled my stomach. Afterwards, I had to <span id="textbox9"></span> <span id="textbox10"></span> to catch our bus. When I got home I <span id="textbox11"></span> my mom for a <span id="textbox12"></span> day at the zoo.</div></center>
+
+	<script type="text/javascript">
+ 	
+var adjective = prompt("Give me an adjective:");
+
+var adjective2 = prompt("Give me another adjective:");
+
+var adjective3 = prompt("Give me another adjective:");
+
+var adjective4 = prompt("Give me another adjective:");
+
+var adverb = prompt("Give me an adverb:");
+
+var adverb2 = prompt("Give me another adverb:");
+
+var noun = prompt("Give me a noun:");
+
+var animal = prompt("Give me an animal:");
+
+var animal2 = prompt("Give me another animal:");
+
+var verb = prompt("Give me a verb:");
+
+var verbpt = prompt("Give me a past-tense verb:");
+
+var verbpt2 = prompt("Give me another past-tense verb:");
+
+textbox.innerText = adjective;
+
+textbox2.innerText = animal;
+
+textbox3.innerText = verbpt;
+
+textbox4.innerText = adverb;
+
+textbox5.innerText = adjective2;
+
+textbox6.innerText = noun;
+
+textbox7.innerText = animal2;
+
+textbox8.innerText = adjective3;
+
+textbox9.innerText = verb;
+
+textbox10.innerText = adverb2;
+
+textbox11.innerText = verbpt2;
+
+textbox12.innerText = adjective4;
+
+
+ </script>
 
 </body>
 </html>
