--- a/journal.html
+++ b/journal.html
@@ -40,6 +40,18 @@ Today in class Avi and I presented our slideshow on Emojis and how they work. We
 <p>
 This week we have been working on new projects in class and at home. I am making Madlibs. My plan is to have alert boxes that ask for different parts of speech (verbs, adjectives, nouns, adverbs, names, etc.). These alert boxes will all come up separately before any text appears on the screen. After all the questions have been answered, the finished madlib will appear on the screen with all the empty boxes filled in. My brother loves Madlibs, so as soon as I finish I will show it to him. Im not done yet because I still need to figure out how to sequence the alert boxes, but I am excited for the end result. </p>
 
+<p>2/14</p>
+<p>
+For the past week and a half, I have been working on my madlib project. Since I first started, I have finished writing two of my scripts and have started to figure out the code for the rest of the website. One problem I encountered was that my word submissions went on a completely separate line, so I was able to fix that problem by using spans as opposed to divs. Another problem I encountered was that when I answered for the first adjective, it plugged in that response for all following adjectives, but I fixed that problem by changing the wording for the span ids. I should be done soon and I'm excited to see my results. </p>
+
+<p>3/3</p>
+<p>
+After working on it on and off for a month, I finally finished my madlibs project. I have three separate madlibs, one revolving around school, one revolving around the zoo, and a third revolving around the ocean. I wrote two other scripts, but I didn't like them and just ran with those three. I faced some problems trying to differentiate the three different websites, but I think I did a god job. I'm excited to show it to my younger brother and sister and see their reactions! </p>
+
+<p>4/14</p>
+<p>
+It's been a while since I last entered in this journal but I recently finished a ping pong related game. Molly showed us a corona virus game, and I decided to make a spinoff of that game using something that had been of interest to me, ping pong. There was a ping pong table added to the 14th floor recently, so I figured I would make a game relating to it. The way the game works is that there is a ping pong paddle that follows your mouse, and you have to click on ping pong balls to hit them away. I showed it to my sister and she thought it was cool, so I'm happy with the finished result! </p>
+
 </div>
 </center>
 </body>
