mj adding newest commit

--- a/journal.html
+++ b/journal.html
@@ -52,6 +52,10 @@ After working on it on and off for a month, I finally finished my madlibs projec
 <p>
 It's been a while since I last entered in this journal but I recently finished a ping pong related game. Molly showed us a corona virus game, and I decided to make a spinoff of that game using something that had been of interest to me, ping pong. There was a ping pong table added to the 14th floor recently, so I figured I would make a game relating to it. The way the game works is that there is a ping pong paddle that follows your mouse, and you have to click on ping pong balls to hit them away. I showed it to my sister and she thought it was cool, so I'm happy with the finished result! </p>
 
+<p>5/18</p>
+<p>
+Today, Avi and I gave our final presentation. We gave our presentation revolving around the problems with the school system. In our presentation we cited harvard graduates and professors. We also wanted to include an Andrew Tate video, but Molly said no to it. We talked about how the amount of stress and lack of academic freedom that this school gives us leads to our work eventually being worse. Throughout the year, we had talked about this topic in recurring conversations, so it was good to put all of it together for our final project. </p>
+
 </div>
 </center>
 </body>
