--- a/projects.html
+++ b/projects.html
@@ -18,5 +18,7 @@
 
 <p><a href="madlibs.html">Madlibs</a></p>
 
+<p><a href="https://docs.google.com/presentation/d/1Ev5wYP3RTH772ewt4YAPFIzsN0zACi_KyZ73Id5IQX8/edit?usp=sharing">Final Presentation</a></p>
+
 </body>
 </html>
