--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <style type="text/css">
 
 body{
-	background-image:url(fishtanktwo.png); 
+	background-image:url(bg.png); 
 	background-size: cover;
 
 }
@@ -21,12 +21,12 @@ body{
 font-size: 100px;
 font-family: 'Patrick Hand', cursive;
 font-style: bold;
-color: red;
+color: black;
 
 }
 
 #Shark1{
-	width: 500px;
+	width: 480px;
 	height: 250px;
 	background-image: url(https://res.cloudinary.com/dk-find-out/image/upload/q_70,c_pad,w_1200,h_630,f_auto/Grey_reef_shark_dreamstime_xl_5569552_qmsbfl.jpg);
 	background-size: contain;
@@ -39,7 +39,7 @@ color: red;
 }
 
 #Shark2{
-	width:500px;
+	width:480px;
 	height:250px;
 	background-image: url(https://res.cloudinary.com/dk-find-out/image/upload/q_70,c_pad,w_1200,h_630,f_auto/Grey_reef_shark_dreamstime_xl_5569552_qmsbfl.jpg);
 	background-size: contain;
@@ -58,7 +58,7 @@ color: red;
 	top: 46%;
 	left: 0%;
 	font-size: 25px;
-	color: red;
+	color: blue;
 
 
 }
@@ -68,7 +68,7 @@ color: red;
 	top:50%;
 	left: 40%;
 	font-size: 25px;
-	color: red;
+	color: blue;
 
 
 }
