--- a/journal.html
+++ b/journal.html
@@ -52,6 +52,14 @@ After working on it on and off for a month, I finally finished my madlibs projec
 <p>
 It's been a while since I last entered in this journal but I recently finished a ping pong related game. Molly showed us a corona virus game, and I decided to make a spinoff of that game using something that had been of interest to me, ping pong. There was a ping pong table added to the 14th floor recently, so I figured I would make a game relating to it. The way the game works is that there is a ping pong paddle that follows your mouse, and you have to click on ping pong balls to hit them away. I showed it to my sister and she thought it was cool, so I'm happy with the finished result! </p>
 
+<p>4/25</p>
+<p>
+Hey, Journal. I haven't finished any more projects yet, but today I pushed my ping pong game and my madlibs. I showed these two projects to my two younger siblings and they both found them really cool! The last project I tried to make for my sister didn't end up working, so I'm glad she enjoyed these projects. As the year is nearing its end, I'm brainstorming what my final project could be about. As of now, my projects don't connect to many life experiences other than my friends, so something revolving around my social life is my only idea. </p>
+
+<p>5/22</p>
+<p>
+Hi journal, today Avi and I finished our presentation. Our topic of choice is revolving around the school system, specifically Dalton, and the negative effect it has on our social life. When it became time to start working on our final projects, neither Avi nor I had an idea. After talking about it for a minute, we got the idea to do a joint presentation and were able to convince Molly. I'm excited to give this presentation that will serve as a lid for all the discussions we've had this year. </p>
+
 <p>5/18</p>
 <p>
 Today, Avi and I gave our final presentation. We gave our presentation revolving around the problems with the school system. In our presentation we cited harvard graduates and professors. We also wanted to include an Andrew Tate video, but Molly said no to it. We talked about how the amount of stress and lack of academic freedom that this school gives us leads to our work eventually being worse. Throughout the year, we had talked about this topic in recurring conversations, so it was good to put all of it together for our final project. </p>
