--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,8 @@
 
 <p><a href="cookiedinosaur.html">Thankful</a></p>
 
+<p><a href="rj.html">RJ Barrett Head</a></p>
+
 <p><a href="pingponggame.html">Ping Pong Game</a></p>
 
 <p><a href="madlibs.html">Madlibs</a></p>
